--- a/src/app/etablissement-list/etablissement-list.component.html
+++ b/src/app/etablissement-list/etablissement-list.component.html
@@ -1,5 +1,25 @@
-<ul class="list-group">
-  <li *ngFor="let etablissement of etablissements" class="list-group-item">
-    {{ etablissement.nom }} - {{ etablissement.adresse }}
-  </li>
-</ul>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Nom</th>
+      <th>Adresse</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let etablissement of etablissements">
+      <td>{{ etablissement.id }}</td>
+      <td>{{ etablissement.nom }}</td>
+      <td>{{ etablissement.adresse }}</td>
+      <td>
+        <button class="btn btn-sm btn-primary me-2" (click)="onEdit(etablissement)">
+          <i class="bi bi-pencil"></i>
+        </button>
+        <button class="btn btn-sm btn-danger" (click)="etablissement.id && onDelete(etablissement.id)">
+          <i class="bi bi-trash"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
