--- a/src/app/etudiant-list/etudiant-list.component.html
+++ b/src/app/etudiant-list/etudiant-list.component.html
@@ -1,5 +1,32 @@
-<ul class="list-group">
-  <li *ngFor="let etudiant of etudiants" class="list-group-item">
-    {{ etudiant.nom }} {{ etudiant.prenom }} - {{ etudiant.age }} ans
-  </li>
-</ul>
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Nom</th>
+      <th>Prénom</th>
+      <th>Âge</th>
+      <th>Établissement</th>
+      <th>Actions</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let etudiant of etudiants">
+      <td>{{ etudiant.id }}</td>
+      <td>{{ etudiant.nom }}</td>
+      <td>{{ etudiant.prenom }}</td>
+      <td>{{ etudiant.age }}</td>
+      <td>{{ getEtablissementNom(etudiant.etablissementId) }}</td>
+      <td>
+        <button class="btn btn-sm btn-primary me-2" (click)="onEdit(etudiant)">
+          <i class="bi bi-pencil"></i>
+        </button>
+        <button
+          class="btn btn-sm btn-danger"
+          (click)="etudiant.id && onDelete(etudiant.id)"
+        >
+          <i class="bi bi-trash"></i>
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
