add edit and delete good  button

--- a/src/app/etablissement-list/etablissement-list.component.html
+++ b/src/app/etablissement-list/etablissement-list.component.html
@@ -23,3 +23,8 @@
     </tr>
   </tbody>
 </table>
+<app-etablissement-edit
+  [etablissement]="etablissementToEdit"
+  (saveEvent)="onSave($event)"
+  (cancelEvent)="onCancel()"
+></app-etablissement-edit>
